--- a/src/Sections/Footer.css
+++ b/src/Sections/Footer.css
@@ -7,6 +7,7 @@
     justify-content: center;
     padding-top: 15px;
     padding-bottom: 15px;
+    overflow: hidden;
 }
 
 .ticker-tape p {
