--- a/src/Sections/MyWords.css
+++ b/src/Sections/MyWords.css
@@ -22,14 +22,14 @@
     }
 }
 
-@media (min-width: 745px) {
+@media (min-width: 802px) {
     .article-list-wrapper {
         padding: 128px 131px;
     }
 
     .article-list {
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(2, minmax(0, 1fr));
         text-align: left;
         gap: 98px;
     }
@@ -39,12 +39,5 @@
 @media (min-width: 1280px) {
     .article-list-wrapper {
         padding: 128px 143px;
-    }
-
-    .article-list {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        text-align: left;
-        gap: 98px;
     }
 }
