--- a/src/Sections/Skills.css
+++ b/src/Sections/Skills.css
@@ -24,6 +24,10 @@ figcaption {
     line-height: normal;
 }
 
+figure {
+    margin: 0;
+}
+
 figure ul {
     list-style: none;
     padding: 0;
@@ -75,7 +79,7 @@ figure ul li {
 }
 
 /********* DESKTOP max-width 1280px *********/
-@media (min-width: 745px) {
+@media (min-width: 802px) {
     .skills-wrapper {
         padding: 128px 222px;
         gap: 128px;
